# libexif

./: .gitignore  CMakeLists.txt  config.h.cmake
libexif/: _stdint.h  config.h
